made icon able to change color for contrast

--- a/packages/components/src/Chip/Chip.mdx
+++ b/packages/components/src/Chip/Chip.mdx
@@ -65,7 +65,7 @@ import { Chip } from "@jobber/components/Chip";
     const [selected, setSelected] = useState(false);
     return (
       <Chip
-        avatar={{ name: "Yoda", imageUrl: "https://bit.ly/38rd3Em" }}
+        icon="checkmark"
         label="Yoda"
         selected={selected}
         onClick={() => setSelected(true)}
