feat(components): Add prefix/suffix to FormField (#613)
* cleanup formField a bit

* remove all styling

* style back to default except select

* style the select

* make tests pass

* fix typing issue

* PR fixes from chris

* cleans up some typescript work

* whoops, forgot to add files

* rename css files

* some css cleanup

* handles the icon for prefix and postfix

* some css cleanup

* remove old css

* wip for css

* adds the proper css for now

* adds the affixpadding

* update InputText.mdx back to normal

* breaks affix to its own component

* fix comment typo

* adjust prefix suffix for small

* adjust spacing on icons

* make ariaLabel required if suffix has action

* update the mdx to show ariaLabel

* Update the CSS on Affix

* fix some css types

* use supports to make the icon nice

* pr fixes from derl

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -75,6 +75,22 @@ The textarea will start at a specified minimum and grow to a specified maximum.
   />
 </Playground>
 
+## Prefix/Suffix
+
+<Playground>
+  <InputText
+    defaultValue="1,000,000"
+    placeholder="Invoice Total"
+    prefix={{ label: "$", icon: "invoice" }}
+    suffix={{
+      label: "💰💰💰",
+      icon: "paidInvoice",
+      ariaLabel: "Tell me i'm rich",
+      onClick: () => alert("You're rich!"),
+    }}
+  />
+</Playground>
+
 ## Validation message
 
 You can add your own custom validation messages on a field. However, this
