--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -109,6 +109,38 @@ that presents a confirm modal.
   }}
 </Playground>
 
+## Destructive
+
+If the user is confirming an action that will destroy, delete, or remove
+something, use a destructive ConfirmationModal to visually reinforce the
+potential consequences.
+
+<Playground>
+  {() => {
+    const [open, setOpen] = useState(false);
+    return (
+      <>
+        <Button
+          label="Delete Bob"
+          variation="destructive"
+          type="secondary"
+          onClick={() => setOpen(true)}
+        />
+        <ConfirmationModal
+          title="Delete Bob?"
+          message={`Deleting Bob will remove their data from your account for good.`}
+          confirmLabel="Delete Bob"
+          open={open}
+          onConfirm={() => alert("Bob has been deleted")}
+          onCancel={() => alert("Bob will not be deleted")}
+          onRequestClose={() => setOpen(false)}
+          variation="destructive"
+        />
+      </>
+    );
+  }}
+</Playground>
+
 ## Related components
 
 - To present non-blocking, contextual, text-only content, use a
