--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -130,8 +130,8 @@ Destructive actions remove something from Jobber.
 
 A Primary destructive action will permanently destroy an object carrying
 signficant data, such as a job, quote, or client. This destructive action should
-be contained in a confirmation dialog triggered by clicking a Secondary
-destructive button.
+be contained in a [ConfirmationModal](/components/confirmation-modal) triggered
+by clicking a secondary or tertiary destructive button.
 
 #### Secondary or Tertiary
 
@@ -142,36 +142,52 @@ A Secondary or tertiary destructive action will either...
 - trigger a dialog to confirm a Primary destructive action
 
 <Playground>
-  <Button label="Delete" variation="destructive" />
-</Playground>
-
-<Playground>
-  <Button label="Delete" variation="destructive" type="secondary" />
-</Playground>
-
-### Cancel Actions
-
-Cancel actions allow the user to opt out of completing an action they have
-triggered, whether that action is Work, Learning, or Destructive.
-
-<Playground>
-  <Button label="Cancel" variation="cancel" />
+  <Content>
+    <Content>
+      <Button label="Delete" variation="destructive" />
+    </Content>
+    <Content>
+      <Button label="Delete" variation="destructive" type="secondary" />
+    </Content>
+    <Content>
+      <Button label="Delete" variation="destructive" type="tertiary" />
+    </Content>
+  </Content>
 </Playground>
 
 ### Subtle Actions
 
-Use for any variation of button when you want the visual appearance to be more,
-well... _subtle._ This type of button has no border, a subdued color, and a
-transparent background, allowing it to sit comfortably alongside more prominent
-content.
+Use a subtle button when you want the visual appearance to be more, well...
+_subtle._ This variation of button uses subdued color, allowing it to sit
+comfortably alongside more prominent content.
 
-Think of icon actions in a navigation bar, or buttons to dismiss a modal.
+Think of icon actions in a navigation bar, buttons to dismiss a modal, or opting
+out of completing an action they have triggered.
+
+> Subtle actions replace a previous concept of "cancel" actions which has been
+> deprecated.
 
 <Playground>
-  <Button type="subtle" icon="search" aria-label="search" />
-  <Button type="subtle" icon="cog" aria-label="settings" />
-  <Button type="subtle" icon="help" aria-label="help" />
-  <Button type="subtle" icon="more" aria-label="more" />
+  <div style={{ backgroundColor:"var(--color-surface--background)", padding:"var(--space-base)" }}>
+    <Button label="Cancel" type="primary" variation="subtle" />
+    <Button label="Cancel" type="secondary" variation="subtle" />
+    <Button label="Cancel" type="tertiary" variation="subtle" />
+
+    <Button variation="subtle" type="tertiary" icon="search" aria-label="search" />
+    <Button variation="subtle" type="tertiary" icon="cog" aria-label="settings" />
+    <Button variation="subtle" type="tertiary" icon="help" aria-label="help" />
+    <Button variation="subtle" type="tertiary" icon="more" aria-label="more" />
+
+    <Button label="Cancel" type="primary" variation="cancel" />
+    <Button label="Cancel" type="secondary" variation="cancel" />
+    <Button label="Cancel" type="tertiary" variation="cancel" />
+
+    <Button variation="cancel" type="tertiary" icon="search" aria-label="search" />
+    <Button variation="cancel" type="tertiary" icon="cog" aria-label="settings" />
+    <Button variation="cancel" type="tertiary" icon="help" aria-label="help" />
+    <Button variation="cancel" type="tertiary" icon="more" aria-label="more" />
+
+  </div>
 </Playground>
 
 ## Disabled
