remove last reference to cancel in docs

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -252,7 +252,7 @@ A way to communicate to the user that a background action is being performed.
     variation="learning"
     loading={true}
   />
-  <Button label="Canceling..." variation="cancel" loading={true} />
+  <Button label="Canceling..." variation="subtle" loading={true} />
 </Playground>
 
 ## Client Side Routing
