feat(components): add subtle button [JOB-34785] (#624)
* introduce subtle color, replace cancel color in Button, add subtle variation to Button

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -77,18 +77,21 @@ currently tied our interactive color to our brand color._
 
 The default color used for interactive elements.
 
+##### Interactive--Subtle
+
+<Swatch
+  colors={[`--color-interactive--subtle`, "--color-interactive--subtle--hover"]}
+/>
+
+Use for interactive elements that should be less visually pronounced, such as an
+icon action in main navigation, or buttons to dismiss or cancel a workflow.
+
 #### Destructive
 
 <Swatch colors={[`--color-destructive`, "--color-destructive--hover"]} />
 
 Use to signify that an interaction will destroy something in the users’ account
 or workflow.
-
-#### Cancel
-
-<Swatch colors={[`--color-cancel`, "--color-cancel--hover"]} />
-
-Use to signify that an interaction will cancel or exit a workflow.
 
 #### Disabled
 
