--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -168,16 +168,22 @@ out of completing an action they have triggered.
 > deprecated.
 
 <Playground>
+  <Content>
+    <Content>
+      <Button label="Cancel" type="primary" variation="subtle" />
+    </Content>
+    <Content>
+      <Button label="Cancel" type="secondary" variation="subtle" />
+    </Content>
+    <Content>
+      <Button label="Cancel" type="tertiary" variation="subtle" />
+    </Content>
+  </Content>
   <div style={{ backgroundColor:"var(--color-surface--background)", padding:"var(--space-base)" }}>
-    <Button label="Cancel" type="primary" variation="subtle" />
-    <Button label="Cancel" type="secondary" variation="subtle" />
-    <Button label="Cancel" type="tertiary" variation="subtle" />
-
     <Button variation="subtle" type="tertiary" icon="search" aria-label="search" />
     <Button variation="subtle" type="tertiary" icon="cog" aria-label="settings" />
     <Button variation="subtle" type="tertiary" icon="help" aria-label="help" />
     <Button variation="subtle" type="tertiary" icon="more" aria-label="more" />
-
   </div>
 </Playground>
 
