--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -51,6 +51,28 @@ needs to access one sub-group at a time.
 Do not use Tabs as a means of navigating the view or in lieu of a Table of
 Contents.
 
+### With default tab
+
+<Playground>
+  <Tabs defaultTab={2}>
+    <Tab label="Eggs">
+      🍳 Some eggs are laid by female animals of many different species,
+      including birds, reptiles, amphibians, mammals, and fish, and have been
+      eaten by humans for thousands of years.
+    </Tab>
+    <Tab label="Cheese">
+      🧀 Cheese is a dairy product derived from milk that is produced in a wide
+      range of flavors, textures, and forms by coagulation of the milk protein
+      casein.
+    </Tab>
+    <Tab label="Berries">
+      🍓 A berry is a small, pulpy, and often edible fruit. Typically, berries
+      are juicy, rounded, brightly colored, sweet, sour or tart, and do not have
+      a stone or pit.
+    </Tab>
+  </Tabs>
+</Playground>
+
 ## Related Components
 
 To show multiple groupings of content at once, use [Card](card).
