--- a/packages/hooks/src/useStatelessReducer/useStatelessReducer.mdx
+++ b/packages/hooks/src/useStatelessReducer/useStatelessReducer.mdx
@@ -7,15 +7,15 @@ route: /hooks/use-stateless-reducer
 import { Playground } from "docz";
 import { useState } from "react";
 import { useStatelessReducer } from "@jobber/hooks";
-import { Form } from "@jobber/components/Form";
 import { Switch } from "@jobber/components/Switch";
 import { Content } from "@jobber/components/Content";
 
 # useStatelessReducer
 
-`useStatelessReducer` is similar to React's internal `useReducer` only does not
-manage internal state so can use with a controlled component. Other than that it
-does not manage state it works the same as `useReducer`.
+`useStatelessReducer` is similar to React's internal `useReducer`, however it
+does not manage internal state so can that it can be used with a controlled
+component. Other than that it does not manage state, it works the same as
+`useReducer`.
 
 ```tsx
 import { useStatelessReducer } from "@jobber/hooks";
@@ -53,7 +53,7 @@ import { useStatelessReducer } from "@jobber/hooks";
         </>
       );
       function handleChange(field) {
-        return (newValue) =>
+        return newValue =>
           dispatch({
             type: "update",
             field: field,
@@ -72,4 +72,5 @@ import { useStatelessReducer } from "@jobber/hooks";
       }
     }
   }}
-</Playground>;
+</Playground>
+;
