--- a/docs/content/product-vocabulary.mdx
+++ b/docs/content/product-vocabulary.mdx
@@ -453,7 +453,7 @@ quote, job or invoice.
 
 Use **subscription** in reference to an SP’s individual recurring payment and how it is managed.
 
-Use **subscribe(d)** as a verb referring to the act of choosing, or having chose, a plan.
+Use **subscribe(d)** as a verb referring to the act of choosing, or having chosen, a plan.
 
 Use **plan** in reference to [Jobber's pre-determined feature templates](https://getjobber.com/pricing/) users can subscribe to.
 
