docs(design): Adding subscription definitions to concepts and items in our product vocabulary  (#665)
* Update product vocabulary

Adding definitions of 'Subscription' 'Subscribe(d)' and 'Plan' under Product Vocabulary 'Concepts and Items'

* Update docs/content/product-vocabulary.mdx

Co-authored-by: Chris Murray <39704901+chris-at-jobber@users.noreply.github.com>

--- a/docs/content/product-vocabulary.mdx
+++ b/docs/content/product-vocabulary.mdx
@@ -449,6 +449,16 @@ quote, job or invoice.
 
 <br />
 
+### subscription / subscribe(d) / plan
+
+Use **subscription** in reference to an SP’s individual recurring payment and how it is managed.
+
+Use **subscribe(d)** as a verb referring to the act of choosing, or having chosen, a plan.
+
+Use **plan** in reference to [Jobber's pre-determined feature templates](https://getjobber.com/pricing/) users can subscribe to.
+
+<br />
+
 ### task / basic task / to do
 
 Use **task** when referring to all task items in Jobber.
