add disabled styling and remove chiplabel

--- a/packages/components/src/Chip/Chip.mdx
+++ b/packages/components/src/Chip/Chip.mdx
@@ -24,6 +24,9 @@ import { Chip } from "@jobber/components/Chip";
       <Chip label="Active" active={true} />
     </Content>
     <Content>
+      <Chip label="Active" disabled={true} />
+    </Content>
+    <Content>
       <Chip label="Darryl Tec" onClick={e => alert("🍪")} />
     </Content>
   </Content>
