fixes the markdown linter

--- a/packages/components/src/Disclosure/Disclosure.mdx
+++ b/packages/components/src/Disclosure/Disclosure.mdx
@@ -16,18 +16,14 @@ import { Disclosure } from ".";
 import { Disclosure } from "@jobber/components/Disclosure";
 ```
 
-The `<Disclosure>` will reveal and hide additional information that the user
-may care about, should they choose to learn more about it.
+The `<Disclosure>` will reveal and hide additional information that the user may
+care about, should they choose to learn more about it.
 
 <Playground>
   <Disclosure title="Advanced instructions">
     <Content>
-      <Text>
-        Here is some helpful information to level up your business:
-      </Text>
-      <Text>
-        For every 2 team members you add, your profits will triple.
-      </Text>
+      <Text>Here is some helpful information to level up your business:</Text>
+      <Text>For every 2 team members you add, your profits will triple.</Text>
     </Content>
   </Disclosure>
 </Playground>
@@ -38,16 +34,19 @@ may care about, should they choose to learn more about it.
 
 ## Usage Guidelines
 
-Use `Disclosure`for progressive... _disclosure..._ of elements that aren't essential 
-for the user to view all at once. You may want to put content inside of a `Disclosure` to... 
-- reduce distractions or avoid overwhelming the user 
+Use `Disclosure`for progressive... _disclosure..._ of elements that aren't
+essential for the user to view all at once. You may want to put content inside
+of a `Disclosure` to...
+
+- reduce distractions or avoid overwhelming the user
 - hide non-critical controls or options in a form
 
-`Disclosure` should only be used to contain content or controls that aren't required for the
-user to complete the primary objective of a given view. For example, if a user has to make a selection
-between two options to complete a task, do not put the selection controls in a `Disclosure`,
-but if there is an optional setting that a user _may_ want to change but is not required to, a `Disclosure`
-would do the trick nicely.
+`Disclosure` should only be used to contain content or controls that aren't
+required for the user to complete the primary objective of a given view. For
+example, if a user has to make a selection between two options to complete a
+task, do not put the selection controls in a `Disclosure`, but if there is an
+optional setting that a user _may_ want to change but is not required to, a
+`Disclosure` would do the trick nicely.
 
 ## Content Guidelines
 
