--- a/docs/content/product-vocabulary.mdx
+++ b/docs/content/product-vocabulary.mdx
@@ -451,11 +451,15 @@ quote, job or invoice.
 
 ### subscription / subscribe(d) / plan
 
-Use **subscription** in reference to an SP’s individual recurring payment and how it is managed.
+Use **subscription** in reference to an SP’s individual recurring payment and
+how it is managed.
 
-Use **subscribe(d)** as a verb referring to the act of choosing, or having chosen, a plan.
+Use **subscribe(d)** as a verb referring to the act of choosing, or having
+chosen, a plan.
 
-Use **plan** in reference to [Jobber's pre-determined feature templates](https://getjobber.com/pricing/) users can subscribe to.
+Use **plan** in reference to
+[Jobber's pre-determined feature templates](https://getjobber.com/pricing/)
+users can subscribe to.
 
 <br />
 
