--- a/packages/components/src/Spinner/Spinner.mdx
+++ b/packages/components/src/Spinner/Spinner.mdx
@@ -44,8 +44,8 @@ button or card contents) or when inline with content
 
 ### Inline
 
-Use `inline` to render the spinner inline with content, such as when it has a leading
-piece of text content that adds context to what loading is happening.
+Use `inline` to render the spinner inline with content, such as when it has a
+leading piece of text content that adds context to what loading is happening.
 
 <Playground>
   <Text>
@@ -55,15 +55,19 @@ piece of text content that adds context to what loading is happening.
 
 ## Accessibility
 
-The `Spinner` should announce itself to users of assistive technology such as screenreaders.
+The `Spinner` should announce itself to users of assistive technology such as
+screenreaders.
 
 The following built-in properties help `Spinner` convey its' role effectively:
 
-- `role="alert"` allows the `Spinner` to be announced as an alert feedback element
-- `aria-busy={true}` informs the user that the view is busy, setting the expectation that they cannot interact for the time being
-- `aria-label="loading"` reads out "Loading" to assistive tech, adding context as to _why_ the view is busy
+- `role="alert"` allows the `Spinner` to be announced as an alert feedback
+  element
+- `aria-busy={true}` informs the user that the view is busy, setting the
+  expectation that they cannot interact for the time being
+- `aria-label="loading"` reads out "Loading" to assistive tech, adding context
+  as to _why_ the view is busy
 
-___
+---
 
 ## Related Components
 
