--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -34,10 +34,9 @@ import { Avatar } from "@jobber/components/Avatar";
 ## Design & Usage Guidelines
 
 - Avatars are available in 3 sizes:
-  - `base`: Should be used by default.
-  - `large`: Should be used when the avatar is the focal point.
-  - `small`: Refrain from using this unless absolutely necessary. I.e. Avatar
-    inside a Chip.
+  - `base`: Used by default.
+  - `large`: Use when the avatar is the focal point.
+  - `small`: Use on higher-density/compact pages or components.
 - If an avatar is displayed without a name label, display a tooltip.
 - Initials and background color should have sufficient color contrast to meet
   AA.
