condense to prefix prop
Update Chip.tsx

Update Chip.tsx

--- a/packages/components/src/Chip/Chip.mdx
+++ b/packages/components/src/Chip/Chip.mdx
@@ -31,14 +31,14 @@ import { Chip } from "@jobber/components/Chip";
     </Content>
     <Content>
       <Chip
-        avatar={<ChipAvatar initials="DT" />}
+        prefix={<ChipAvatar initials="DT" />}
         label="Darryl Tec"
         onClick={e => alert("🍪")}
       />
     </Content>
     <Content>
       <Chip
-        icon={<ChipIcon name="quote" />}
+        prefix={<ChipIcon name="quote" />}
         label="Darryl Tec"
         onClick={e => alert("🍪")}
       />
